--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name" : "UCSD Schedule to Calendar",
   "manifest_version": 2,
-  "version": "0.0.0.1",
+  "version": "0.0.0.2",
   "description": "Add your UCSD Schedule from WebReg to your own Calendar using a .ics file.",
   "browser_action": {
     "name": "Manipulate DOM",
@@ -14,8 +14,11 @@
     "matches": [ "http://*/*", "https://*/*"]
   }],
   "permissions": [
-          "downloads"
+          "downloads",
+          "clipboardRead",
+          "clipboardWrite"
         ],
+  "content_security_policy":"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "background": {
     "scripts": ["popup.js"],
     "persistent": false
