--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
   "name" : "UCSD Schedule to Calendar",
   "manifest_version": 2,
-  "version": "0.0.0.2",
+  "version": "0.0.0.4",
   "description": "Add your UCSD Schedule from WebReg to your own Calendar using a .ics file.",
   "browser_action": {
     "name": "Manipulate DOM",
     "icons": ["icon.png"],
     "default_icon": "icon1.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title" : "UCSD Schedule to Calendar"
   },
   "content_scripts": [ {
-    "js": [ "jquery.min.js", "background.js" ],
-    "matches": [ "http://*/*", "https://*/*"]
+    "js": [ "jquery-331.js", "background.js" ],
+    "matches": [ "https://act.ucsd.edu/webreg2/*"]
   }],
   "permissions": [
           "downloads",
-          "clipboardRead",
-          "clipboardWrite"
+          "clipboardWrite",
+          "tabs",
+          "storage"
         ],
   "content_security_policy":"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "background": {
